O pokemonCount se baseia na API agora.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
 
 h1 {
   letter-spacing: 5px;
+  margin: 10px;
+}
+
+h1:hover {
+  transform: scale(1.1);
+  letter-spacing: 6px;
 }
 
 .poke-container {
